@@ -1,0 +1,4 @@
+# frozen_string_literal: true
+
+require 'yardspec'
+Yardspec.define_examples
